--- a/Instructor Notebooks/sect_17/sect_17_bayesian_statistics-instructor-fix.ipynb
+++ b/Instructor Notebooks/sect_17/sect_17_bayesian_statistics-instructor-fix.ipynb
@@ -178,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:39:50.152985Z",
-     "start_time": "2020-07-08T01:39:44.842202Z"
+     "end_time": "2020-07-08T22:52:19.156111Z",
+     "start_time": "2020-07-08T22:52:15.157770Z"
     }
    },
    "outputs": [
@@ -197,46 +197,46 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122\" ><caption>Loaded Packages and Handles</caption><thead>    <tr>        <th class=\"col_heading level0 col0\" >Handle</th>        <th class=\"col_heading level0 col1\" >Package</th>        <th class=\"col_heading level0 col2\" >Description</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626\" ><caption>Loaded Packages and Handles</caption><thead>    <tr>        <th class=\"col_heading level0 col0\" >Handle</th>        <th class=\"col_heading level0 col1\" >Package</th>        <th class=\"col_heading level0 col2\" >Description</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row0_col0\" class=\"data row0 col0\" >dp</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row0_col1\" class=\"data row0 col1\" >IPython.display</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row0_col2\" class=\"data row0 col2\" >Display modules with helpful display and clearing commands.</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row0_col0\" class=\"data row0 col0\" >dp</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row0_col1\" class=\"data row0 col1\" >IPython.display</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row0_col2\" class=\"data row0 col2\" >Display modules with helpful display and clearing commands.</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row1_col0\" class=\"data row1 col0\" >fs</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row1_col1\" class=\"data row1 col1\" >fsds</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row1_col2\" class=\"data row1 col2\" >Custom data science bootcamp student package</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row1_col0\" class=\"data row1 col0\" >fs</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row1_col1\" class=\"data row1 col1\" >fsds</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row1_col2\" class=\"data row1 col2\" >Custom data science bootcamp student package</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row2_col0\" class=\"data row2 col0\" >mpl</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row2_col1\" class=\"data row2 col1\" >matplotlib</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row2_col2\" class=\"data row2 col2\" >Matplotlib's base OOP module with formatting artists</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row2_col0\" class=\"data row2 col0\" >mpl</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row2_col1\" class=\"data row2 col1\" >matplotlib</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row2_col2\" class=\"data row2 col2\" >Matplotlib's base OOP module with formatting artists</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row3_col0\" class=\"data row3 col0\" >plt</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row3_col1\" class=\"data row3 col1\" >matplotlib.pyplot</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row3_col2\" class=\"data row3 col2\" >Matplotlib's matlab-like plotting module</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row3_col0\" class=\"data row3 col0\" >plt</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row3_col1\" class=\"data row3 col1\" >matplotlib.pyplot</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row3_col2\" class=\"data row3 col2\" >Matplotlib's matlab-like plotting module</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row4_col0\" class=\"data row4 col0\" >np</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row4_col1\" class=\"data row4 col1\" >numpy</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row4_col2\" class=\"data row4 col2\" >scientific computing with Python</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row4_col0\" class=\"data row4 col0\" >np</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row4_col1\" class=\"data row4 col1\" >numpy</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row4_col2\" class=\"data row4 col2\" >scientific computing with Python</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row5_col0\" class=\"data row5 col0\" >pd</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row5_col1\" class=\"data row5 col1\" >pandas</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row5_col2\" class=\"data row5 col2\" >High performance data structures and tools</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row5_col0\" class=\"data row5 col0\" >pd</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row5_col1\" class=\"data row5 col1\" >pandas</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row5_col2\" class=\"data row5 col2\" >High performance data structures and tools</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row6_col0\" class=\"data row6 col0\" >sns</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row6_col1\" class=\"data row6 col1\" >seaborn</td>\n",
-       "                        <td id=\"T_e8fad1fa_c0bb_11ea_99f6_acde48001122row6_col2\" class=\"data row6 col2\" >High-level data visualization library based on matplotlib</td>\n",
+       "                                <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row6_col0\" class=\"data row6 col0\" >sns</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row6_col1\" class=\"data row6 col1\" >seaborn</td>\n",
+       "                        <td id=\"T_ad0a0366_c16d_11ea_996f_4865ee12e626row6_col2\" class=\"data row6 col2\" >High-level data visualization library based on matplotlib</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1070842b0>"
+       "<pandas.io.formats.style.Styler at 0x1111bda58>"
       ]
      },
      "metadata": {},
@@ -305,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:47.205484Z",
-     "start_time": "2020-07-08T01:40:47.202583Z"
+     "end_time": "2020-07-08T22:52:19.159970Z",
+     "start_time": "2020-07-08T22:52:19.157520Z"
     }
    },
    "outputs": [],
@@ -349,11 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:48.465668Z",
-     "start_time": "2020-07-08T01:40:48.461502Z"
+     "end_time": "2020-07-08T22:52:19.164432Z",
+     "start_time": "2020-07-08T22:52:19.161297Z"
     }
    },
    "outputs": [
@@ -363,7 +363,7 @@
        "0.32"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,11 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:48.850888Z",
-     "start_time": "2020-07-08T01:40:48.847254Z"
+     "end_time": "2020-07-08T22:52:19.168330Z",
+     "start_time": "2020-07-08T22:52:19.165651Z"
     }
    },
    "outputs": [
@@ -394,7 +394,7 @@
        "0.46875"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,11 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:49.910249Z",
-     "start_time": "2020-07-08T01:40:49.907790Z"
+     "end_time": "2020-07-08T22:52:19.171502Z",
+     "start_time": "2020-07-08T22:52:19.169594Z"
     }
    },
    "outputs": [],
@@ -444,11 +444,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:50.252599Z",
-     "start_time": "2020-07-08T01:40:50.249009Z"
+     "end_time": "2020-07-08T22:52:19.175788Z",
+     "start_time": "2020-07-08T22:52:19.172689Z"
     }
    },
    "outputs": [
@@ -458,7 +458,7 @@
        "0.5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,11 +479,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:50.763375Z",
-     "start_time": "2020-07-08T01:40:50.761000Z"
+     "end_time": "2020-07-08T22:52:19.179313Z",
+     "start_time": "2020-07-08T22:52:19.177185Z"
     }
    },
    "outputs": [],
@@ -495,11 +495,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:51.047038Z",
-     "start_time": "2020-07-08T01:40:51.043472Z"
+     "end_time": "2020-07-08T22:52:19.184071Z",
+     "start_time": "2020-07-08T22:52:19.181232Z"
     }
    },
    "outputs": [
@@ -509,7 +509,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,11 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:51.711028Z",
-     "start_time": "2020-07-08T01:40:51.708128Z"
+     "end_time": "2020-07-08T22:52:19.188467Z",
+     "start_time": "2020-07-08T22:52:19.185726Z"
     }
    },
    "outputs": [],
@@ -561,11 +561,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:51.847039Z",
-     "start_time": "2020-07-08T01:40:51.843526Z"
+     "end_time": "2020-07-08T22:52:19.193049Z",
+     "start_time": "2020-07-08T22:52:19.189732Z"
     }
    },
    "outputs": [
@@ -575,7 +575,7 @@
        "0.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,11 +653,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:54.383773Z",
-     "start_time": "2020-07-08T01:40:54.104139Z"
+     "end_time": "2020-07-08T22:52:19.492254Z",
+     "start_time": "2020-07-08T22:52:19.194433Z"
     }
    },
    "outputs": [
@@ -776,7 +776,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,26 +788,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:54.730873Z",
-     "start_time": "2020-07-08T01:40:54.725754Z"
+     "end_time": "2020-07-08T22:56:16.241522Z",
+     "start_time": "2020-07-08T22:56:16.236771Z"
     }
    },
    "outputs": [],
    "source": [
     "## Separate Out Males' height\n",
-    "df_male = df.groupby('Gender').get_group(\"Male\")['Height']"
+    "df_male = df.groupby('Gender').get_group(\"Male\")['Height']\n",
+    "# df_male.describe()[['mean','std']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:55.209353Z",
-     "start_time": "2020-07-08T01:40:55.203824Z"
+     "end_time": "2020-07-08T22:52:19.505282Z",
+     "start_time": "2020-07-08T22:52:19.499734Z"
     }
    },
    "outputs": [
@@ -828,7 +829,7 @@
        "Name: Height, Length: 100, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,11 +842,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:55.961196Z",
-     "start_time": "2020-07-08T01:40:55.795415Z"
+     "end_time": "2020-07-08T22:52:19.687360Z",
+     "start_time": "2020-07-08T22:52:19.506625Z"
     }
    },
    "outputs": [
@@ -855,7 +856,7 @@
        "[Text(0.5, 0, 'Height (inches)'), Text(0.5, 1.0, 'Observed Male Heights')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -889,11 +890,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:40:56.975475Z",
-     "start_time": "2020-07-08T01:40:56.973077Z"
+     "end_time": "2020-07-08T22:52:19.690635Z",
+     "start_time": "2020-07-08T22:52:19.688544Z"
     }
    },
    "outputs": [],
@@ -903,11 +904,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:42:47.766316Z",
-     "start_time": "2020-07-08T01:42:47.761261Z"
+     "end_time": "2020-07-08T22:52:19.696296Z",
+     "start_time": "2020-07-08T22:52:19.691996Z"
     }
    },
    "outputs": [],
@@ -926,21 +927,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:43:49.297135Z",
-     "start_time": "2020-07-08T01:43:49.140440Z"
+     "end_time": "2020-07-08T22:52:19.843547Z",
+     "start_time": "2020-07-08T22:52:19.697463Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12e1d9f98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1104e3da0>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -965,11 +966,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-08T01:44:05.036576Z",
-     "start_time": "2020-07-08T01:44:04.855495Z"
+     "end_time": "2020-07-08T22:52:20.033059Z",
+     "start_time": "2020-07-08T22:52:19.844808Z"
     }
    },
    "outputs": [
